--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Ritual Impecable</title>
+  <title>Triggui – Ritual Finalísimo</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -14,12 +14,13 @@
       background: white;
       overflow: hidden;
     }
+
     body.dark { background: #000; }
 
     .main {
+      height: 100vh;
       display: flex;
       flex-direction: column;
-      height: 100vh;
       justify-content: space-between;
     }
 
@@ -29,13 +30,14 @@
       grid-template-rows: 1fr 1fr;
       gap: 2vw;
       padding: 2vw;
-      flex: 1;
+      height: 78vh; /* 🔥 más espacio abajo para trigguiletras */
     }
 
     @media (orientation: landscape), (min-width: 768px) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
+        height: 78vh;
       }
     }
 
@@ -46,14 +48,14 @@
       text-align: center;
       border-radius: 16px;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       color: white;
       position: relative;
       overflow: hidden;
       background-size: cover;
       background-position: center;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
+      transition: background 0.4s ease, transform 0.3s ease;
     }
 
     .block-content {
@@ -62,29 +64,29 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 16px;
+      padding: 12px;
       text-align: center;
     }
 
     .label { z-index: 1; }
 
     .accionable {
-      background: linear-gradient(135deg, #fdfbfb, #ebedee);
-      color: #222;
+      background: radial-gradient(circle at center, #ffffffee, #f0f0f0dd);
+      color: #111;
       font-size: 1rem;
       font-weight: 600;
       padding: 14px;
       border-radius: 14px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.25);
       opacity: 0;
-      animation: aparecer 0.8s forwards;
+      animation: aparecer 0.6s forwards;
     }
 
     .portada-wrapper img {
-      width: 95%;
-      max-height: 95%;
+      width: 100%;
+      max-height: 100%;
       object-fit: contain;
-      border-radius: 18px;
+      border-radius: 16px;
       animation: flotar 8s ease-in-out infinite;
     }
 
@@ -99,10 +101,11 @@
     }
 
     .footer {
-      padding: 1vh;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: flex-end;
+      height: 22vh;
     }
 
     .shock {
@@ -114,9 +117,9 @@
       padding: 10px 22px;
       font-size: 1rem;
       cursor: pointer;
-      box-shadow: 0 4px 16px rgba(255, 150, 0, 0.5);
+      box-shadow: 0 4px 16px rgba(255, 140, 0, 0.5);
       animation: fadeIn 1s ease forwards;
-      margin-top: 10px;
+      margin-top: 6px;
     }
 
     .final-message {
@@ -131,11 +134,10 @@
       background: none;
       border: none;
       font-size: 2rem;
-      margin-top: 8px;
+      margin-top: 6px;
       cursor: pointer;
       color: white;
       opacity: 0.6;
-      transition: opacity 0.3s ease;
     }
 
     #reiniciarBtn:hover {
@@ -144,24 +146,8 @@
 
     .trigguiletras {
       height: 22px;
-      margin-top: 10px;
-      opacity: 0.8;
-    }
-
-    .pulse { animation: pulse 2.5s infinite; }
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.02); opacity: 0.9; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
-    .shake { animation: shake 0.4s; }
-    @keyframes shake {
-      0% { transform: translateX(0px); }
-      25% { transform: translateX(-4px); }
-      50% { transform: translateX(4px); }
-      75% { transform: translateX(-2px); }
-      100% { transform: translateX(0px); }
+      margin-top: 6px;
+      opacity: 0.85;
     }
 
     .hidden { display: none !important; }
@@ -170,7 +156,6 @@
 <body>
   <div class="main">
     <div class="grid" id="gridContainer"></div>
-
     <div class="footer">
       <button class="shock hidden" id="shockBtn">📚👊 Chócalas</button>
       <div class="final-message hidden" id="mensajeFinal">📖 Abre un libro y encuentra una verdad.</div>
@@ -183,49 +168,47 @@
 const bloques = ["detente", "lee", "pregunta", "conecta"];
 const colores = [
   "linear-gradient(135deg, #ff416c, #ff4b2b)",
-  "linear-gradient(135deg, #1fa2ff, #12d8fa, #a6ffcb)",
-  "linear-gradient(135deg, #fc466b, #3f5efb)",
-  "linear-gradient(135deg, #56ab2f, #a8e063)"
+  "linear-gradient(135deg, #2193b0, #6dd5ed)",
+  "linear-gradient(135deg, #cc2b5e, #753a88)",
+  "linear-gradient(135deg, #43cea2, #185a9d)"
 ];
 
 const libros = [
   {
     portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1678027798i/123116666.jpg',
     frases: [
-      "🚀 Construye productos, no excusas.",
-      "💡 La mejor innovación es invisible.",
-      "🌎 No compitas, redefine las reglas."
+      "🚀 Construye sin pedir permiso.",
+      "💡 Innova donde otros repiten.",
+      "🌍 Empieza por ti, cambia el sistema."
     ]
   },
   {
     portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1606707026i/53138083.jpg',
     frases: [
-      "🔍 Retrocede desde el cliente ideal.",
-      "🧠 Simplifica procesos hasta lo esencial.",
-      "📈 Las pequeñas mejoras escalan imperios."
+      "🎯 Comienza desde el usuario.",
+      "🧠 Piensa con precisión matemática.",
+      "🔄 Elimina todo lo innecesario."
     ]
   },
   {
     portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg',
     frases: [
-      "🎭 Tu carácter domina tus reacciones.",
-      "👁️ Las emociones son armas o cadenas.",
-      "⚡ El verdadero poder es paciencia calculada."
+      "🎭 Entiende tus sombras y hazlas aliadas.",
+      "🧬 El poder nace del autoconocimiento.",
+      "👁️ Lo emocional es lo más racional."
     ]
   },
   {
     portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1604385988i/55729446.jpg',
     frases: [
-      "🧘‍♂️ Domina tu atención y dominarás tu vida.",
-      "🎯 Elimina el ruido, enfoca tu poder.",
-      "🚀 Sin concentración, no hay ascenso."
+      "🧘‍♂️ La atención es tu recurso más escaso.",
+      "🎯 Concéntrate como si fuera tu vida.",
+      "🚀 Avanza sin distracciones."
     ]
   }
 ];
 
 let libroActual, bloquePortada, revelado = false;
-const mostrado = new Set();
-
 const el = id => document.getElementById(id);
 
 function iniciarJuego() {
@@ -234,53 +217,58 @@ function iniciarJuego() {
   libroActual = libros[Math.floor(Math.random() * libros.length)];
   bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
   revelado = false;
-  mostrado.clear();
+
+  let frasesDisponibles = [...libroActual.frases];
 
   bloques.forEach((nombre, i) => {
     const div = document.createElement('div');
-    div.className = 'block' + (nombre === bloquePortada ? ' pulse' : '');
+    div.className = 'block';
     div.id = nombre;
     div.style.background = colores[i];
     div.innerHTML = `
       <div class="block-content label">${nombre.toUpperCase()}</div>
       <div class="block-content accionable hidden" id="${nombre}Text"></div>
     `;
-    div.onclick = () => manejarClick(nombre);
+    div.onclick = () => manejarClick(nombre, i);
     grid.appendChild(div);
+  });
+
+  // Guardar frases por bloque
+  bloques.forEach((bloque, i) => {
+    const frase = frasesDisponibles[i % frasesDisponibles.length];
+    document.getElementById(bloque + "Text").dataset.frase = frase;
   });
 }
 
-function manejarClick(nombre) {
+function manejarClick(nombre, index) {
   if (revelado) {
     location.reload();
   } else if (nombre === bloquePortada) {
     revelarTodo();
   } else {
-    revelarSolo(nombre);
+    const txt = document.getElementById(nombre + "Text");
+    txt.textContent = txt.dataset.frase;
+    txt.classList.remove("hidden");
+    document.getElementById(nombre).querySelector(".label").classList.add("hidden");
   }
 }
 
-function revelarSolo(bloque) {
-  if (mostrado.has(bloque)) return;
-  mostrado.add(bloque);
-  const frase = libroActual.frases.shift();
-  el(bloque + "Text").textContent = frase;
-  el(bloque + "Text").classList.remove("hidden");
-  el(bloque).querySelector(".label").classList.add("hidden");
-  el(bloque).classList.add("shake");
-  setTimeout(() => el(bloque).classList.remove("shake"), 400);
-}
-
 function revelarTodo() {
-  bloques.forEach(bloque => {
+  bloques.forEach((bloque, i) => {
+    const block = document.getElementById(bloque);
+    const txt = document.getElementById(bloque + "Text");
+    block.querySelector(".label").classList.add("hidden");
+
     if (bloque === bloquePortada) {
-      el(bloque).style.background = "none";
-      el(bloque + "Text").innerHTML = `<img src="${libroActual.portada}" style="width:95%;border-radius:18px;">`;
+      block.style.background = "none";
+      txt.innerHTML = `<img src="${libroActual.portada}" style="width:100%;border-radius:16px;">`;
+    } else {
+      txt.textContent = txt.dataset.frase;
     }
-    el(bloque + "Text").classList.remove("hidden");
-    el(bloque).querySelector(".label").classList.add("hidden");
-    el(bloque).classList.remove("pulse");
+
+    txt.classList.remove("hidden");
   });
+
   document.body.classList.add("dark");
   el("shockBtn").classList.remove("hidden");
   revelado = true;
