--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Triggui – Ritual Perfecto</title>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     html, body {
       width: 100%;
       height: 100%;
@@ -14,15 +18,15 @@
       background: white;
       overflow: hidden;
     }
-
-    body.dark { background: #000; }
-
+    body.dark {
+      background: #000;
+    }
     .main {
+      height: 100dvh;
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      overflow: hidden;
     }
-
     .grid {
       flex: 1;
       display: grid;
@@ -32,14 +36,12 @@
       padding: 2vw;
       overflow-y: auto;
     }
-
     @media (orientation: landscape), (min-width: 768px) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
-
     .block {
       display: flex;
       justify-content: center;
@@ -56,7 +58,6 @@
       cursor: pointer;
       transition: all 0.3s ease;
     }
-
     .block-content {
       position: absolute;
       inset: 0;
@@ -66,9 +67,9 @@
       padding: 14px;
       text-align: center;
     }
-
-    .label { z-index: 1; }
-
+    .label {
+      z-index: 1;
+    }
     .accionable {
       color: white;
       font-size: 1rem;
@@ -77,13 +78,12 @@
       border-radius: 16px;
       opacity: 0;
       animation: aparecer 0.6s forwards;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
-
-    .bg1 { background: linear-gradient(135deg, #f6d365, #fda085); }
-    .bg2 { background: linear-gradient(135deg, #a1c4fd, #c2e9fb); }
-    .bg3 { background: linear-gradient(135deg, #fbc2eb, #a6c1ee); }
-    .bg4 { background: linear-gradient(135deg, #fddb92, #d1fdff); }
+    .bg1 { background: #ffccbc; color: #3e2723; }
+    .bg2 { background: #c8e6c9; color: #1b5e20; }
+    .bg3 { background: #b3e5fc; color: #01579b; }
+    .bg4 { background: #f8bbd0; color: #880e4f; }
 
     .portada-wrapper img {
       width: 100%;
@@ -92,17 +92,14 @@
       animation: flotar 8s ease-in-out infinite;
       border-radius: 16px;
     }
-
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
     }
-
     @keyframes aparecer {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
-
     .footer {
       display: flex;
       flex-direction: column;
@@ -111,7 +108,6 @@
       min-height: 80px;
       justify-content: center;
     }
-
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
@@ -125,14 +121,12 @@
       animation: fadeIn 1s ease forwards;
       margin-bottom: 6px;
     }
-
     .final-message {
       color: white;
       font-size: 1rem;
       text-align: center;
       opacity: 0.88;
     }
-
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
@@ -144,18 +138,17 @@
       backdrop-filter: blur(5px);
       margin-top: 6px;
     }
-
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
-
     .trigguiletras {
       height: 24px;
       opacity: 0.9;
       transition: opacity 0.4s ease;
     }
-
-    .hidden { display: none !important; }
+    .hidden {
+      display: none !important;
+    }
   </style>
 </head>
 <body>
@@ -185,7 +178,8 @@ const libros = [
     frases: [
       "🧠 El poder nace del autoconocimiento.",
       "👁️ Lo emocional es lo más racional.",
-      "🎭 Entiende tus sombras y hazlas aliadas."
+      "🎭 Entiende tus sombras y hazlas aliadas.",
+      "🧬 Todo comportamiento tiene raíz invisible."
     ]
   }
 ];
@@ -201,6 +195,9 @@ function iniciarJuego() {
   revelado = false;
   logo.classList.remove("hidden");
 
+  let frases = [...libroActual.frases];
+  while (frases.length < 4) frases.push(...libroActual.frases);
+
   bloques.forEach((nombre, i) => {
     const div = document.createElement('div');
     div.className = 'block';
@@ -209,7 +206,7 @@ function iniciarJuego() {
     const bgClass = `bg${i+1}`;
     div.innerHTML = `
       <div class="block-content label">${nombre.toUpperCase()}</div>
-      <div class="block-content accionable hidden ${bgClass}" id="${nombre}Text">${libroActual.frases[i]}</div>
+      <div class="block-content accionable hidden ${bgClass}" id="${nombre}Text">${frases[i]}</div>
     `;
     div.onclick = () => manejarClick(nombre);
     grid.appendChild(div);
@@ -238,7 +235,6 @@ function revelarTodo() {
     }
     text.classList.remove("hidden");
   });
-
   document.body.classList.add("dark");
   el("shockBtn").classList.remove("hidden");
   el("logoTriggui").classList.add("hidden");
