--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,6 @@
       height: 100dvh;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
     }
     .grid {
       flex: 1;
@@ -85,21 +84,25 @@
     .bg3 { background: #b3e5fc; color: #01579b; }
     .bg4 { background: #f8bbd0; color: #880e4f; }
 
-    .portada-wrapper img {
+    .portada-img {
       width: 100%;
-      max-height: 100%;
+      height: 100%;
       object-fit: contain;
       animation: flotar 8s ease-in-out infinite;
-      border-radius: 16px;
+      border-radius: 0;
+      background: none;
     }
+
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
     }
+
     @keyframes aparecer {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
+
     .footer {
       display: flex;
       flex-direction: column;
@@ -108,6 +111,7 @@
       min-height: 80px;
       justify-content: center;
     }
+
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
@@ -121,12 +125,14 @@
       animation: fadeIn 1s ease forwards;
       margin-bottom: 6px;
     }
+
     .final-message {
       color: white;
       font-size: 1rem;
       text-align: center;
       opacity: 0.88;
     }
+
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
@@ -138,14 +144,17 @@
       backdrop-filter: blur(5px);
       margin-top: 6px;
     }
+
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
+
     .trigguiletras {
       height: 24px;
       opacity: 0.9;
       transition: opacity 0.4s ease;
     }
+
     .hidden {
       display: none !important;
     }
@@ -166,10 +175,10 @@
 const el = id => document.getElementById(id);
 const bloques = ["detente", "lee", "pregunta", "conecta"];
 const colores = [
-  "linear-gradient(135deg, #ff4e50, #f9d423)",
-  "linear-gradient(135deg, #00c9ff, #92fe9d)",
-  "linear-gradient(135deg, #f2709c, #ff9472)",
-  "linear-gradient(135deg, #43cea2, #185a9d)"
+  "#ffccbc",
+  "#c8e6c9",
+  "#b3e5fc",
+  "#f8bbd0"
 ];
 
 const libros = [
@@ -230,10 +239,14 @@ function revelarTodo() {
     const text = el(nombre + "Text");
     block.querySelector(".label").classList.add("hidden");
     if (nombre === bloquePortada) {
+      // Reemplazar completamente el contenido con solo la imagen
+      block.innerHTML = `<img src="${libroActual.portada}" class="portada-img" alt="Portada del libro">`;
       block.style.background = "none";
-      text.innerHTML = `<img src="${libroActual.portada}" style="width:100%;border-radius:16px;">`;
+      block.style.padding = "0";
+      block.style.borderRadius = "0";
+    } else {
+      text.classList.remove("hidden");
     }
-    text.classList.remove("hidden");
   });
   document.body.classList.add("dark");
   el("shockBtn").classList.remove("hidden");
