--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Triggui – Ritual Perfecto</title>
+  <title>Triggui – Ritual Heurístico</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       width: 100%;
       height: 100%;
@@ -18,14 +14,14 @@
       background: white;
       overflow: hidden;
     }
-    body.dark {
-      background: #000;
-    }
+    body.dark { background: #000; }
+
     .main {
       height: 100dvh;
       display: flex;
       flex-direction: column;
     }
+
     .grid {
       flex: 1;
       display: grid;
@@ -35,18 +31,20 @@
       padding: 2vw;
       overflow-y: auto;
     }
+
     @media (orientation: landscape), (min-width: 768px) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
+
     .block {
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      border-radius: 16px;
+      border-radius: 20px;
       font-weight: bold;
       font-size: 1.1rem;
       color: white;
@@ -57,6 +55,7 @@
       cursor: pointer;
       transition: all 0.3s ease;
     }
+
     .block-content {
       position: absolute;
       inset: 0;
@@ -66,31 +65,30 @@
       padding: 14px;
       text-align: center;
     }
-    .label {
-      z-index: 1;
-    }
+
+    .label { z-index: 1; }
+
     .accionable {
-      color: white;
       font-size: 1rem;
       font-weight: 600;
       padding: 16px;
-      border-radius: 16px;
+      border-radius: 20px;
       opacity: 0;
       animation: aparecer 0.6s forwards;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
-    .bg1 { background: #ffccbc; color: #3e2723; }
-    .bg2 { background: #c8e6c9; color: #1b5e20; }
-    .bg3 { background: #b3e5fc; color: #01579b; }
-    .bg4 { background: #f8bbd0; color: #880e4f; }
+
+    .bg1 { background: linear-gradient(135deg, #2980b9, #6dd5fa); color: #000000; }
+    .bg2 { background: linear-gradient(135deg, #e74c3c, #ecf0f1); color: #ffffff; }
+    .bg3 { background: linear-gradient(135deg, #f39c12, #f1c40f); color: #000000; }
+    .bg4 { background: linear-gradient(135deg, #8e44ad, #c0392b); color: #ffffff; }
 
     .portada-img {
       width: 100%;
       height: 100%;
       object-fit: contain;
       animation: flotar 8s ease-in-out infinite;
-      border-radius: 0;
-      background: none;
+      border-radius: 20px;
     }
 
     @keyframes flotar {
@@ -174,44 +172,27 @@
 <script>
 const el = id => document.getElementById(id);
 const bloques = ["detente", "lee", "pregunta", "conecta"];
-const colores = [
-  "#ffccbc",
-  "#c8e6c9",
-  "#b3e5fc",
-  "#f8bbd0"
+const frases = [
+  "🧠 El poder nace del autoconocimiento.",
+  "👁️ Lo emocional es lo más racional.",
+  "🎭 Entiende tus sombras y hazlas aliadas.",
+  "🧬 Todo comportamiento tiene raíz invisible."
 ];
-
-const libros = [
-  {
-    portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg',
-    frases: [
-      "🧠 El poder nace del autoconocimiento.",
-      "👁️ Lo emocional es lo más racional.",
-      "🎭 Entiende tus sombras y hazlas aliadas.",
-      "🧬 Todo comportamiento tiene raíz invisible."
-    ]
-  }
-];
-
-let libroActual, bloquePortada, revelado = false;
+const portadaURL = "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg";
+let bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
+let revelado = false;
 
 function iniciarJuego() {
   const grid = el('gridContainer');
   const logo = el('logoTriggui');
   grid.innerHTML = '';
-  libroActual = libros[0];
-  bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
-  revelado = false;
   logo.classList.remove("hidden");
-
-  let frases = [...libroActual.frases];
-  while (frases.length < 4) frases.push(...libroActual.frases);
 
   bloques.forEach((nombre, i) => {
     const div = document.createElement('div');
     div.className = 'block';
     div.id = nombre;
-    div.style.background = colores[i];
+
     const bgClass = `bg${i+1}`;
     div.innerHTML = `
       <div class="block-content label">${nombre.toUpperCase()}</div>
@@ -227,8 +208,7 @@ function manejarClick(nombre) {
   if (nombre === bloquePortada) {
     revelarTodo();
   } else {
-    const text = el(nombre + "Text");
-    text.classList.remove("hidden");
+    el(nombre + "Text").classList.remove("hidden");
     el(nombre).querySelector(".label").classList.add("hidden");
   }
 }
@@ -238,16 +218,16 @@ function revelarTodo() {
     const block = el(nombre);
     const text = el(nombre + "Text");
     block.querySelector(".label").classList.add("hidden");
+
     if (nombre === bloquePortada) {
-      // Reemplazar completamente el contenido con solo la imagen
-      block.innerHTML = `<img src="${libroActual.portada}" class="portada-img" alt="Portada del libro">`;
+      block.innerHTML = `<img src="${portadaURL}" class="portada-img" alt="Portada">`;
       block.style.background = "none";
       block.style.padding = "0";
-      block.style.borderRadius = "0";
     } else {
       text.classList.remove("hidden");
     }
   });
+
   document.body.classList.add("dark");
   el("shockBtn").classList.remove("hidden");
   el("logoTriggui").classList.add("hidden");
