--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Triggui – Ritual Heurístico</title>
+  <title>Triggui – Ritual Perfecto</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -15,13 +15,11 @@
       overflow: hidden;
     }
     body.dark { background: #000; }
-
     .main {
       height: 100dvh;
       display: flex;
       flex-direction: column;
     }
-
     .grid {
       flex: 1;
       display: grid;
@@ -31,14 +29,12 @@
       padding: 2vw;
       overflow-y: auto;
     }
-
     @media (orientation: landscape), (min-width: 768px) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
-
     .block {
       display: flex;
       justify-content: center;
@@ -55,7 +51,6 @@
       cursor: pointer;
       transition: all 0.3s ease;
     }
-
     .block-content {
       position: absolute;
       inset: 0;
@@ -65,9 +60,7 @@
       padding: 14px;
       text-align: center;
     }
-
     .label { z-index: 1; }
-
     .accionable {
       font-size: 1rem;
       font-weight: 600;
@@ -77,11 +70,10 @@
       animation: aparecer 0.6s forwards;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
-
-    .bg1 { background: linear-gradient(135deg, #2980b9, #6dd5fa); color: #000000; }
-    .bg2 { background: linear-gradient(135deg, #e74c3c, #ecf0f1); color: #ffffff; }
-    .bg3 { background: linear-gradient(135deg, #f39c12, #f1c40f); color: #000000; }
-    .bg4 { background: linear-gradient(135deg, #8e44ad, #c0392b); color: #ffffff; }
+    .bg1 { background: linear-gradient(135deg, #2980b9, #6dd5fa); color: #000; }
+    .bg2 { background: linear-gradient(135deg, #e74c3c, #ecf0f1); color: #000; }
+    .bg3 { background: linear-gradient(135deg, #f39c12, #f1c40f); color: #000; }
+    .bg4 { background: linear-gradient(135deg, #8e44ad, #c0392b); color: #fff; }
 
     .portada-img {
       width: 100%;
@@ -90,17 +82,14 @@
       animation: flotar 8s ease-in-out infinite;
       border-radius: 20px;
     }
-
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
     }
-
     @keyframes aparecer {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
-
     .footer {
       display: flex;
       flex-direction: column;
@@ -109,7 +98,6 @@
       min-height: 80px;
       justify-content: center;
     }
-
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
@@ -123,14 +111,12 @@
       animation: fadeIn 1s ease forwards;
       margin-bottom: 6px;
     }
-
     .final-message {
       color: white;
       font-size: 1rem;
       text-align: center;
       opacity: 0.88;
     }
-
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
@@ -142,17 +128,14 @@
       backdrop-filter: blur(5px);
       margin-top: 6px;
     }
-
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
-
     .trigguiletras {
       height: 24px;
       opacity: 0.9;
       transition: opacity 0.4s ease;
     }
-
     .hidden {
       display: none !important;
     }
@@ -205,26 +188,31 @@ function iniciarJuego() {
 
 function manejarClick(nombre) {
   if (revelado) return location.reload();
+
   if (nombre === bloquePortada) {
     revelarTodo();
   } else {
-    el(nombre + "Text").classList.remove("hidden");
-    el(nombre).querySelector(".label").classList.add("hidden");
+    const txt = el(nombre + "Text");
+    if (txt) {
+      txt.classList.remove("hidden");
+      el(nombre).querySelector(".label").classList.add("hidden");
+    }
   }
 }
 
 function revelarTodo() {
   bloques.forEach((nombre, i) => {
     const block = el(nombre);
-    const text = el(nombre + "Text");
-    block.querySelector(".label").classList.add("hidden");
+    const label = block.querySelector(".label");
+    if (label) label.classList.add("hidden");
 
     if (nombre === bloquePortada) {
       block.innerHTML = `<img src="${portadaURL}" class="portada-img" alt="Portada">`;
       block.style.background = "none";
       block.style.padding = "0";
     } else {
-      text.classList.remove("hidden");
+      const txt = el(nombre + "Text");
+      if (txt) txt.classList.remove("hidden");
     }
   });
 
