--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Ritual Estable</title>
+  <title>Triggui – Ritual Perfecto</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -15,6 +15,7 @@
       overflow: hidden;
     }
     body.dark { background: #000; }
+
     .main {
       height: 100dvh;
       display: flex;
@@ -42,14 +43,18 @@
       text-align: center;
       border-radius: 20px;
       font-weight: bold;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       color: white;
       position: relative;
       overflow: hidden;
       background-size: cover;
       background-position: center;
       cursor: pointer;
-      transition: all 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .block:hover {
+      transform: scale(1.04);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.2);
     }
     .block-content {
       position: absolute;
@@ -61,7 +66,6 @@
       text-align: center;
     }
     .label { z-index: 1; }
-
     .accionable {
       font-size: 1rem;
       font-weight: 600;
@@ -69,12 +73,12 @@
       border-radius: 20px;
       opacity: 0;
       animation: aparecer 0.6s forwards;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
     }
-    .bg1 { background: linear-gradient(135deg, #2980b9, #6dd5fa); color: #000; }
-    .bg2 { background: linear-gradient(135deg, #e74c3c, #ecf0f1); color: #000; }
-    .bg3 { background: linear-gradient(135deg, #f39c12, #f1c40f); color: #000; }
-    .bg4 { background: linear-gradient(135deg, #8e44ad, #c0392b); color: #fff; }
+    .bg1 { background: linear-gradient(135deg, #ff9a9e, #fad0c4); color: #000; }
+    .bg2 { background: linear-gradient(135deg, #a1c4fd, #c2e9fb); color: #000; }
+    .bg3 { background: linear-gradient(135deg, #fbc2eb, #a6c1ee); color: #000; }
+    .bg4 { background: linear-gradient(135deg, #ffecd2, #fcb69f); color: #000; }
 
     .portada-img {
       width: 100%;
@@ -83,17 +87,14 @@
       animation: flotar 8s ease-in-out infinite;
       border-radius: 20px;
     }
-
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
     }
-
     @keyframes aparecer {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
-
     .footer {
       display: flex;
       flex-direction: column;
@@ -102,7 +103,6 @@
       min-height: 80px;
       justify-content: center;
     }
-
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
@@ -116,14 +116,12 @@
       animation: fadeIn 1s ease forwards;
       margin-bottom: 6px;
     }
-
     .final-message {
       color: white;
       font-size: 1rem;
       text-align: center;
       opacity: 0.88;
     }
-
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
@@ -135,22 +133,18 @@
       backdrop-filter: blur(5px);
       margin-top: 6px;
     }
-
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
-
     .trigguiletras {
       height: 24px;
       opacity: 0.9;
       transition: opacity 0.4s ease;
     }
-
-    .hidden {
-      display: none !important;
-    }
+    .hidden { display: none !important; }
   </style>
 </head>
+
 <body>
   <div class="main">
     <div class="grid" id="gridContainer"></div>
@@ -163,94 +157,97 @@
   </div>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const el = id => document.getElementById(id);
-  const bloques = ["detente", "lee", "pregunta", "conecta"];
-  const frases = [
-    "🧠 El poder nace del autoconocimiento.",
-    "👁️ Lo emocional es lo más racional.",
-    "🎭 Entiende tus sombras y hazlas aliadas.",
-    "🧬 Todo comportamiento tiene raíz invisible."
-  ];
-  const portadaURL = "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg";
-  let bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
-  let revelado = false;
+const el = id => document.getElementById(id);
+const bloques = ["detente", "lee", "pregunta", "conecta"];
+const colores = [
+  "#ff9a9e",
+  "#a1c4fd",
+  "#fbc2eb",
+  "#ffecd2"
+];
 
+const libros = [
+  {
+    portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg',
+    frases: [
+      "🧠 El poder nace del autoconocimiento.",
+      "👁️ Lo emocional es lo más racional.",
+      "🎭 Entiende tus sombras y hazlas aliadas.",
+      "🧬 Todo comportamiento tiene raíz invisible."
+    ]
+  }
+];
+
+let libroActual, bloquePortada, revelado = false;
+
+function iniciarJuego() {
   const grid = el('gridContainer');
   const logo = el('logoTriggui');
+  grid.innerHTML = '';
+  libroActual = libros[0];
+  bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
+  revelado = false;
+  logo.classList.remove("hidden");
 
-  function iniciarJuego() {
-    grid.innerHTML = '';
-    logo.classList.remove("hidden");
+  let frases = [...libroActual.frases];
+  while (frases.length < 4) frases.push(...libroActual.frases);
 
-    bloques.forEach((nombre, i) => {
-      const div = document.createElement('div');
-      div.className = 'block';
-      div.id = nombre;
-      const bgClass = `bg${i+1}`;
-      div.innerHTML = `
-        <div class="block-content label">${nombre.toUpperCase()}</div>
-        <div class="block-content accionable hidden ${bgClass}" id="${nombre}Text">${frases[i]}</div>
-      `;
-      div.onclick = () => manejarClick(nombre);
-      grid.appendChild(div);
-    });
+  bloques.forEach((nombre, i) => {
+    const div = document.createElement('div');
+    div.className = 'block';
+    div.id = nombre;
+    div.style.background = colores[i];
+    const bgClass = `bg${i+1}`;
+    div.innerHTML = `
+      <div class="block-content label">${nombre.toUpperCase()}</div>
+      <div class="block-content accionable hidden ${bgClass}" id="${nombre}Text">${frases[i]}</div>
+    `;
+    div.onclick = () => manejarClick(nombre);
+    grid.appendChild(div);
+  });
+}
+
+function manejarClick(nombre) {
+  if (revelado) return location.reload();
+  if (nombre === bloquePortada) {
+    revelarTodo();
+  } else {
+    const text = el(nombre + "Text");
+    text.classList.remove("hidden");
+    el(nombre).querySelector(".label").classList.add("hidden");
   }
+}
 
-  function manejarClick(nombre) {
-    if (revelado) return location.reload();
+function revelarTodo() {
+  bloques.forEach((nombre, i) => {
+    const block = el(nombre);
+    const text = el(nombre + "Text");
+    block.querySelector(".label").classList.add("hidden");
+
     if (nombre === bloquePortada) {
-      revelarTodo();
+      block.innerHTML = `<img src="${libroActual.portada}" class="portada-img" alt="Portada del libro">`;
+      block.style.background = "none";
+      block.style.padding = "0";
+      block.style.borderRadius = "20px"; // 🔥 conservamos esquinas redondeadas
     } else {
-      const txt = el(nombre + "Text");
-      if (txt) {
-        txt.classList.remove("hidden");
-        const label = el(nombre).querySelector(".label");
-        if (label) label.classList.add("hidden");
-      }
+      text.classList.remove("hidden");
     }
-  }
+  });
+  document.body.classList.add("dark");
+  el("shockBtn").classList.remove("hidden");
+  el("logoTriggui").classList.add("hidden");
+  revelado = true;
+}
 
-  function revelarTodo() {
-    bloques.forEach((nombre, i) => {
-      const block = el(nombre);
+el("shockBtn").onclick = () => {
+  el("shockBtn").classList.add("hidden");
+  el("mensajeFinal").classList.remove("hidden");
+  el("reiniciarBtn").classList.remove("hidden");
+};
 
-      if (nombre === bloquePortada) {
-        const label = block.querySelector(".label");
-        const text = el(nombre + "Text");
-        if (label) label.classList.add("hidden");
-        if (text) text.remove();
+el("reiniciarBtn").onclick = () => location.reload();
 
-        const img = document.createElement("img");
-        img.src = portadaURL;
-        img.alt = "Portada del libro";
-        img.className = "portada-img";
-        block.appendChild(img);
-        block.style.background = "none";
-      } else {
-        const text = el(nombre + "Text");
-        if (text) text.classList.remove("hidden");
-        const label = block.querySelector(".label");
-        if (label) label.classList.add("hidden");
-      }
-    });
-
-    document.body.classList.add("dark");
-    el("shockBtn").classList.remove("hidden");
-    el("logoTriggui").classList.add("hidden");
-    revelado = true;
-  }
-
-  el("shockBtn").onclick = () => {
-    el("shockBtn").classList.add("hidden");
-    el("mensajeFinal").classList.remove("hidden");
-    el("reiniciarBtn").classList.remove("hidden");
-  };
-
-  el("reiniciarBtn").onclick = () => location.reload();
-
-  iniciarJuego();
-});
+iniciarJuego();
 </script>
 </body>
 </html>
