--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Heurística Suprema</title>
+  <title>Triggui – Nivel Dios</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -11,10 +11,11 @@
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
-      background: #fafafa;
+      background: #fdfdfd;
       overflow: hidden;
     }
     body.dark { background: #000; }
+
     .main {
       height: 100dvh;
       display: flex;
@@ -42,7 +43,7 @@
       text-align: center;
       border-radius: 20px;
       font-weight: bold;
-      font-size: 1.4rem;
+      font-size: 1.3rem;
       color: white;
       position: relative;
       overflow: hidden;
@@ -54,7 +55,7 @@
     }
     .block:hover {
       transform: scale(1.05);
-      box-shadow: 0 10px 30px rgba(0,0,0,0.25);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
     }
     .block-content {
       position: absolute;
@@ -67,12 +68,12 @@
     }
     .label { z-index: 1; }
     .accionable {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       font-weight: 600;
       padding: 16px;
       border-radius: 20px;
       opacity: 0;
-      animation: aparecer 0.8s forwards;
+      animation: aparecer 0.7s forwards;
       box-shadow: 0 6px 20px rgba(0,0,0,0.4);
       background: rgba(255,255,255,0.15);
       backdrop-filter: blur(8px);
@@ -81,14 +82,16 @@
     .bg2 { background: linear-gradient(135deg, #00c3ff, #ffff1c); color: #000000; }
     .bg3 { background: linear-gradient(135deg, #fc466b, #3f5efb); color: #ffffff; }
     .bg4 { background: linear-gradient(135deg, #8e2de2, #4a00e0); color: #ffffff; }
+
     .portada-img {
       width: 100%;
       height: 100%;
       object-fit: contain;
       border-radius: 20px;
-      box-shadow: 0 10px 50px rgba(0,0,0,0.6);
+      box-shadow: 0 12px 50px rgba(0,0,0,0.6);
       animation: flotar 6s ease-in-out infinite;
     }
+
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
@@ -102,6 +105,7 @@
       50% { transform: scale(1.02); }
       100% { transform: scale(1); }
     }
+
     .footer {
       display: flex;
       flex-direction: column;
@@ -110,6 +114,7 @@
       min-height: 80px;
       justify-content: center;
     }
+
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
@@ -123,6 +128,7 @@
       animation: fadeIn 1.5s ease forwards;
       margin-bottom: 8px;
     }
+
     .final-message {
       color: white;
       font-size: 1.3rem;
@@ -130,6 +136,7 @@
       opacity: 0.92;
       margin-top: 10px;
     }
+
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
@@ -144,12 +151,14 @@
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
+
     .trigguiletras {
       height: 26px;
       opacity: 0.9;
       margin-top: 8px;
       transition: opacity 0.4s ease;
     }
+
     .hidden { display: none !important; }
   </style>
 </head>
@@ -204,26 +213,38 @@ function manejarClick(nombre) {
     revelarTodo();
   } else {
     const text = el(nombre + "Text");
-    text.classList.remove("hidden");
-    el(nombre).querySelector(".label").classList.add("hidden");
+    if (text) {
+      text.classList.remove("hidden");
+      el(nombre).querySelector(".label").classList.add("hidden");
+    }
   }
 }
 
 function revelarTodo() {
   bloques.forEach((nombre, i) => {
     const block = el(nombre);
+    const label = block.querySelector(".label");
     const text = el(nombre + "Text");
-    block.querySelector(".label").classList.add("hidden");
 
     if (nombre === bloquePortada) {
-      block.innerHTML = `<img src="${portadaURL}" class="portada-img" alt="Portada del libro">`;
+      if (label) label.classList.add("hidden");
+      if (text) text.remove();
+
+      const img = document.createElement("img");
+      img.src = portadaURL;
+      img.alt = "Portada del libro";
+      img.className = "portada-img";
+      block.innerHTML = '';
+      block.appendChild(img);
       block.style.background = "none";
       block.style.padding = "0";
-      block.style.borderRadius = "20px"; 
+      block.style.borderRadius = "20px";
     } else {
-      text.classList.remove("hidden");
+      if (text) text.classList.remove("hidden");
+      if (label) label.classList.add("hidden");
     }
   });
+
   document.body.classList.add("dark");
   el("shockBtn").classList.remove("hidden");
   el("logoTriggui").classList.add("hidden");
